--- a/imageConverter/app/templates/index.html
+++ b/imageConverter/app/templates/index.html
@@ -15,6 +15,12 @@
 				<form method="post" enctype="multipart/form-data">
 					{% csrf_token %}
 					<input type="file" enctype="multipart/form-data" name="file" accept=".heic" />
+					<select>
+						<option value="jpeg">jpeg</option>
+						<option value="png">png</option>
+						<option value="svg">svg</option>
+						<option value="gif">gif</option>
+					</select>
 					<input type="submit" value="Upload" />
 				</form>
 			</div>
